# OptBoltzmann-archive

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/notebooks/: get_params.ipynb
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
models/sbml/: split_pathway.xml
src/OptBoltzmann/: __init__.py  __main__.py  maximum_entropy.py  version.py
src/mentos/: __init__.py  cli.py  maximum_entropy.py
tests/: __init__.py  test_OptBoltzmann.py  test_mentos.py  test_version.py
